--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
     <section class="home slider" id="home"> 
             <div class="home-content">
                 <div class="container">
-                    <h1>Jacob Taylor<br><span class="element" data-text1="" data-text2="Web Developer" data-loop="false" data-backdelay="5300"></span></h1> 
+                    <h1 style="margin-bottom: 0px">Jacob Taylor</h1>
+                    <h1>Web Developer</h1> 
                     <div class="social">
-                        <a href="#"><i class="fa fa-github" aria-hidden="true"></i>  </a>
-                        <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i>  </a>
+                        <a href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  </a>
+                        <a href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>  </a>
                         
                     </div>
                     <a class="home-down bounce" href="#about"><i class="fa fa-angle-down"></i></a>
@@ -324,8 +325,8 @@
                     <li>480.395.7011</li>
                 </ul>
                 <div class="social-icons top_60 row"> 
-                    <a class="fb" href="#"><i class="fa fa-github" aria-hidden="true"></i></a> 
-                    <a class="tw" href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>     
+                    <a class="fb" href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> 
+                    <a class="tw" href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>     
                 </div>
             </div>
             <div class="col-md-7 col-md-offset-2 form top_30 bottom_90">
@@ -355,8 +356,8 @@
     <footer>
         <div class="container">
             <div class="social">
-                <a href="#">github </a>
-                <a href="#">linkedin </a>     
+                <a href="https://github.com/Firecoded" target="_blank">github </a>
+                <a href="https://www.linkedin.com/in/jacobcodes/" target="_blank">linkedin </a>     
             </div>
             <p></p>
         </div>
@@ -377,7 +378,7 @@
    //SUPER SLİDER
     $('#slides').superslides({
       animation: 'fade',
-      play: 6800
+      play: 6000
     });    
 </script>    
     
