--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <div class="row">
                     <div href="single-blog.html" class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-content wow fadeInUp" data-wow-delay="0.4s">
                         <div class="blog-image">
-                            <img src="images/blog-1.jpg">
+                            <img src="images/getdevjobpic.png">
                         </div>
                         <h2 class="blog-title">getDevJob(you)</h2>
                         <p>A job listing site focused on helping web developers find their next gig. The site was built with ... and notable features include ... </p>
