Added resume link icon

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <div class="social">
                         <a href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  </a>
                         <a href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>  </a>
+                        <a href="" target="_blank"><i class="fa fa-file" aria-hidden="true"></i>  </a>
                         
                     </div>
                     <a class="home-down bounce" href="#about"><i class="fa fa-angle-down"></i></a>
@@ -283,7 +284,7 @@
                             <img src="images/getdevjob.jpg">
                         </div>
                         <h2 class="blog-title">getDevJob(you)</h2>
-                        <p>A job listing site focused on helping web developers find their next gig. The site was built with React.js, Redux, Materialize, HTML, CSS, PHP and MySQL. </p>
+                        <p>A job listing site focused on helping web developers find their next gig. The site was built with ReactJS, Redux, Materialize, HTML, CSS, PHP and MySQL. </p>
                         <span class="blog-info "><span><a href='https://getdevjob.com' target="_blank">Live Demo</a> </span> - <a target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>GitHub</a></span>
                     </div>
                     <div href="single-blog.html" class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-content wow fadeInUp" data-wow-delay="0.6s">
@@ -296,13 +297,13 @@
                     </div>
                     <div href="single-blog.html" class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-content wow hidden-sm fadeInUp" data-wow-delay="0.8s">
                         <div class="blog-image">
-                            <img src="images/blog-3.jpg">
+                            <img src="images/inprogress.jpg">
                         </div>
-                        <h2 class="blog-title">Behind Sooner Dining so Window </h2>
-                        <p>Quick six blind smart out burst. Perfectly on furniture dejection determine my depending an to. Add short water court fat.  </p>
-                        <span class="blog-info"><span>Larry Stark</span> - 7 September 2016 </span>
+                        <h2 class="blog-title">Memory Enrichment Center </h2>
+                        <p>Memory Match game styled around the video game Portal. Built with ReactJS, HTML, and CSS.</p>
+                        <span class="blog-info"><span></span>  </span>
                     </div>
-                    <a href="otherprojects.html" class="sitebtn pull-right top_45">Load More</a>
+                    <!-- <a href="otherprojects.html" class="sitebtn pull-right top_45">Load More</a> -->
                 </div>
             </div>
             <svg class="diagonal-gray" width="100%" height="170" viewBox="0 0 100 102" preserveAspectRatio="none">
@@ -327,7 +328,8 @@
                 </ul>
                 <div class="social-icons top_60 row"> 
                     <a class="fb" href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> 
-                    <a class="tw" href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>     
+                    <a class="tw" href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="" target="_blank"><i class="fa fa-file" aria-hidden="true"></i>  </a>
                 </div>
             </div>
             <div class="col-md-7 col-md-offset-2 form top_30 bottom_45">
@@ -358,7 +360,8 @@
         <div class="container">
             <div class="social">
                 <a href="https://github.com/Firecoded" target="_blank">GitHub <i class="fa fa-github" aria-hidden="true"></i></a>
-                <a href="https://www.linkedin.com/in/jacobcodes/" target="_blank">LinkedIn <i class="fa fa-linkedin btm-icon" aria-hidden="true"></i></a>     
+                <a href="https://www.linkedin.com/in/jacobcodes/" target="_blank">LinkedIn <i class="fa fa-linkedin btm-icon" aria-hidden="true"></i></a> 
+                <a href="" target="_blank">Resume <i class="fa fa-file" aria-hidden="true"></i>  </a>    
             </div>
             <p></p>
         </div>
