reduced padding around sections, changed icon sizes

--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
     <!--PORTFOLIO-->
 
     <section class="blog" id="blog">
-        <div class="container-fluid dgray-bg padbot_200">
+        <div class="container-fluid dgray-bg padbot_120">
             <div class="container">
-                <div class="section-title dright top_120 bottom_45">
+                <div class="section-title dright top_90 bottom_45">
                     <h2>Portfolio</h2>
                 </div>
                 <!-- Blogs -->
@@ -329,7 +329,7 @@
                 <div class="social-icons top_60 row"> 
                     <a class="fb" href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> 
                     <a class="tw" href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    <a href="" target="_blank"><i class="fa fa-file" aria-hidden="true"></i>  </a>
+                    <a class='fb' href="" target="_blank"><i class="fa fa-file" aria-hidden="true"></i>  </a>
                 </div>
             </div>
             <div class="col-md-7 col-md-offset-2 form top_30 bottom_45">
