changed folio hover

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <section class="home slider" id="home"> 
             <div class="home-content">
                 <div class="container">
-                    <h1 style="margin-bottom: 0px">Jacob Taylor</h1>
-                    <h1>Web Developer</h1> 
+                    <h1 class = 'dot-shadow' style="margin-bottom: 0px">Jacob Taylor</h1>
+                    <h1 class = 'dot-shadow' >Web Developer</h1> 
                     <div class="social">
                         <a href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  </a>
                         <a href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>  </a>
@@ -285,17 +285,20 @@
                     <div href="single-blog.html" class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-content wow fadeInUp" data-wow-delay="0.4s">
                         <div class="blog-image">
                             <img class = "folio-img" src="images/getdevjob.jpg" alt = "getdevjob landing page">
-                            <a class = "live-desktop" href='https://getdevjob.com' target="_blank">Live Demo</a> </span> <a class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>GitHub</a>
+                            <div class = 'hover-cont'>
+                                <a class = "live-desktop" href='https://getdevjob.com' target="_blank">Live Demo</a> </span> <a class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>GitHub</a>
+                            </div>    
                         </div>
                         <h2 class="blog-title">getDevJob(you)</h2>
                         <p>A job listing site focused on helping web developers find their next gig. The site was built with ReactJS, Redux, Materialize, HTML, CSS, PHP and MySQL. </p>
-                        <span class="blog-info "><span><a class = "live-mobile" href='https://getdevjob.com' target="_blank">Live Demo</a> </span> <a class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>- GitHub</a></span>
-
+                        <a class = "live-mobile" href='https://getdevjob.com' target="_blank">Live Demo</a> </span> <a class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>- GitHub</a></span>
                     </div>
                     <div href="single-blog.html" class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-content wow fadeInUp" data-wow-delay="0.6s">
                         <div class="blog-image">
                             <img class = 'folio-img' src="images/concertfinder.jpg" alt ="concertfinder landing page">
+                            <div class = 'hover-cont'>
                                 <a class = "live-desktop" href='http://jacobcodes.com/concert-finder' target="_blank">Live Demo</a> </span> <a class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/concertfinder'>GitHub</a>
+                            </div>    
                         </div>
                         <h2 class="blog-title">ConcertFinder</h2>
                         <p>App that helps find concerts and search for restuarants, bars and hotels near the venue. Built with Javascript, jQuery, HTML and CSS. Utilized Ajax to access data from TicketMaster, Google and Yelp.</p>
