--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                             </div>    
                         </div>
                         <h2 class="blog-title">getDevJob(you)</h2>
-                        <p>A job listing site focused on helping web developers find their next gig. The site was built with ReactJS, Redux, Materialize, HTML, CSS, PHP and MySQL. </p>
+                        <p>Web based job board application targeted towards developers. React and Materialize was used to build our user interface. Endpoints were established using axios. PHP was used to handle requests from the client and to communicate with MySQL database. This app was created by 4 developers in 6 weeks. </p>
                         <a class = "live-mobile" href='https://getdevjob.com' target="_blank">Live Demo</a> </span> <a class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>- GitHub</a></span>
                     </div>
                     <div href="single-blog.html" class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-content wow fadeInUp" data-wow-delay="0.6s">
@@ -307,10 +307,13 @@
                     <div href="single-blog.html" class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-content wow hidden-sm fadeInUp" data-wow-delay="0.8s">
                         <div class="blog-image">
                             <img src="images/inprogress.jpg" alt = "code in progress">
+                            <div class = 'hover-cont'>
+                                <a class = "live-desktop" href='http://jacobcodes.com/concert-finder' target="_blank">Live Demo</a> </span> <a class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/concertfinder'>GitHub</a>
+                            </div>  
                         </div>
                         <h2 class="blog-title">Memory Enrichment Center </h2>
-                        <p>Memory Match game styled around the video game Portal. Built with ReactJS, HTML, and CSS.</p>
-                        <span class="blog-info"><span></span>  </span>
+                        <p>Memory Match game styled around the video game Portal aimed to emulate a computer operating system. Built with ReactJS, HTML, and CSS with an emphasis on CSS and keyframe animation.</p>
+                        <span class="blog-info "><span><a class = "live-mobile" href='http://jacobcodes.com/concert-finder' target="_blank">Live Demo</a> </span> <a class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/concertfinder'>- GitHub</a></span>
                     </div>
                     <!-- <a href="otherprojects.html" class="sitebtn pull-right top_45">Load More</a> -->
                 </div>
