removed unused files

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="social">
                         <a href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  </a>
                         <a href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>  </a>
-                        <a href="" target="_blank"><i class="fa fa-file" aria-hidden="true"></i>  </a>
+                        <a href="https://drive.google.com/file/d/1oMwaAs2LdSPB87F0rhmlah9rFE3p-eSy/view?usp=sharing" target="_blank"><i class="fa fa-file" aria-hidden="true"></i>  </a>
                         
                     </div>
                     <a class="home-down bounce" href="#about"><i class="fa fa-angle-down"></i></a>
@@ -115,7 +115,7 @@
                 
                 <!-- work areas --> 
             <div class = 'owl-cont'><h2 class = 'section-title skills-header'>Skills & Technology</h2>
-                <div class="owl-carousel work-areas top_120 bottom_30 add-cursor" data-pagination="false" data-autoplay="3000" data-items-desktop="5" data-items-desktop-small="4" data-items-tablet="2" data-items-tablet-small="2">
+                <div class="owl-carousel work-areas top_120 bottom_30 all-scroll" data-pagination="false" data-autoplay="3000" data-items-desktop="5" data-items-desktop-small="4" data-items-tablet="2" data-items-tablet-small="2">
                     <!-- an area -->
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="owl-carousel work-areas top_30 bottom_60 add-cursor" data-pagination="false" data-autoplay="3000" data-items-desktop="5" data-items-desktop-small="4" data-items-tablet="2" data-items-tablet-small="1">
+                <div class="owl-carousel work-areas top_30 bottom_60 all-scroll" data-pagination="false" data-autoplay="3000" data-items-desktop="5" data-items-desktop-small="4" data-items-tablet="2" data-items-tablet-small="1">
 
                     <!-- an area -->
                     <div class="area col-md-12 item">
@@ -306,14 +306,14 @@
                     </div>
                     <div href="single-blog.html" class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-content wow hidden-sm fadeInUp" data-wow-delay="0.8s">
                         <div class="blog-image">
-                            <img src="images/inprogress.jpg" alt = "code in progress">
+                            <img src="images/mem_match.jpg" alt = "code in progress">
                             <div class = 'hover-cont'>
-                                <a class = "live-desktop" href='http://jacobcodes.com/concert-finder' target="_blank">Live Demo</a> </span> <a class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/concertfinder'>GitHub</a>
+                                <a class = "live-desktop" href='http://memory.jacobcodes.com/' target="_blank">Live Demo</a> </span> <a class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/memory_match_react'>GitHub</a>
                             </div>  
                         </div>
                         <h2 class="blog-title">Memory Enrichment Center </h2>
                         <p>Memory Match game styled around the video game Portal aimed to emulate a computer operating system. Built with ReactJS, HTML, and CSS with an emphasis on CSS and keyframe animation.</p>
-                        <span class="blog-info "><span><a class = "live-mobile" href='http://jacobcodes.com/concert-finder' target="_blank">Live Demo</a> </span> <a class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/concertfinder'>- GitHub</a></span>
+                        <span class="blog-info "><span><a class = "live-mobile" href='http://memory.jacobcodes.com/' target="_blank">Live Demo</a> </span> <a class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/memory_match_react'>- GitHub</a></span>
                     </div>
                     <!-- <a href="otherprojects.html" class="sitebtn pull-right top_45">Load More</a> -->
                 </div>
@@ -341,7 +341,7 @@
                 <div class="social-icons top_60 row"> 
                     <a class="fb" href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> 
                     <a class="tw" href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    <a class='fb' href="" target="_blank"><i class="fa fa-file" aria-hidden="true"></i>  </a>
+                    <a class='fb' href="https://drive.google.com/file/d/1oMwaAs2LdSPB87F0rhmlah9rFE3p-eSy/view?usp=sharing" target="_blank"><i class="fa fa-file" aria-hidden="true"></i>  </a>
                 </div>
             </div>
             <div class="col-md-7 col-md-offset-2 form top_30 bottom_45">
@@ -373,7 +373,7 @@
             <div class="social">
                 <a href="https://github.com/Firecoded" target="_blank">GitHub <i class="fa fa-github" aria-hidden="true"></i></a>
                 <a href="https://www.linkedin.com/in/jacobcodes/" target="_blank">LinkedIn <i class="fa fa-linkedin btm-icon" aria-hidden="true"></i></a> 
-                <a href="" target="_blank">Resume <i class="fa fa-file" aria-hidden="true"></i>  </a>    
+                <a href="https://drive.google.com/file/d/1oMwaAs2LdSPB87F0rhmlah9rFE3p-eSy/view?usp=sharing" target="_blank">Resume <i class="fa fa-file" aria-hidden="true"></i>  </a>    
             </div>
             <p></p>
         </div>
