changed blog to portfolio nav

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <ul class="nav-menu">
                     <li><a href="#home" class="smoothScroll">Home</a></li>
                     <li><a href="#about" class="smoothScroll">About</a></li>
-                    <li><a href="#blog" class="smoothScroll">Portfolio</a></li>
+                    <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
                     <li><a href="#contact" class="smoothScroll">Contact</a></li>
                 </ul>
             </div>
@@ -274,7 +274,7 @@
     
     <!--PORTFOLIO-->
 
-    <section class="blog" id="blog">
+    <section class="blog" id="portfolio">
         <div class="container-fluid dgray-bg padbot_120">
             <div class="container">
                 <div class="section-title dright top_90 bottom_45">
