--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 </div>
                 <div class="responsive"><i data-icon="m" class="icon"></i></div>
                 <ul class="nav-menu">
-                    <li><a href="#home" class="smoothScroll">Home</a></li>
-                    <li><a href="#about" class="smoothScroll">About</a></li>
-                    <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
-                    <li><a href="#contact" class="smoothScroll">Contact</a></li>
+                    <li><a rel="noreferrer" href="#home" class="smoothScroll">Home</a></li>
+                    <li><a rel="noreferrer" href="#about" class="smoothScroll">About</a></li>
+                    <li><a rel="noreferrer" href="#portfolio" class="smoothScroll">Portfolio</a></li>
+                    <li><a rel="noreferrer" href="#contact" class="smoothScroll">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -62,24 +62,20 @@
     <section class="home slider" id="home"> 
             <div class="home-content">
                 <div class="container">
-                    <h1 class = 'dot-shadow' style="margin-bottom: 0px">Jacob Taylor</h1>
-                    <h1 class = 'dot-shadow' >Web Developer</h1> 
+                    <h1 style="margin-bottom: 0px">Jacob Taylor</h1>
+                    <h1>Web Developer</h1> 
                     <div class="social">
-                        <a href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  </a>
-                        <a href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>  </a>
-                        <a href="https://drive.google.com/file/d/1oMwaAs2LdSPB87F0rhmlah9rFE3p-eSy/view?usp=sharing" target="_blank"><i class="fa fa-file" aria-hidden="true"></i>  </a>
-                        
+                        <a rel="noreferrer" href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  </a>
+                        <a rel="noreferrer" href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>  </a>
+                        <a rel="noreferrer" href="https://drive.google.com/file/d/1oMwaAs2LdSPB87F0rhmlah9rFE3p-eSy/view?usp=sharing" target="_blank"><i class="fa fa-file" aria-hidden="true"></i></a>   
                     </div>
-                    <a class="home-down bounce" href="#about"><i class="fa fa-angle-down"></i></a>
+                    <a rel="noreferrer" class="home-down bounce" href="#about"><i class="fa fa-angle-down"></i></a>
                 </div>
             </div>
              <div class="home-slider">
             <div id="slides">
               <div class="slides-container">
                 <img src="images/main-1_opt.jpg" alt="Ocean waves">
-                <img src="images/main-6_opt.jpg" alt="Trees, Mountains, Rocks, Sunset">
-                <img src="images/main-2_opt.jpg" alt="Ocean waves and shoreline">
-                <img src="images/main-4_opt.jpg" alt="Trees, Fog, Trail">
               </div>
            </div>
             </div>
@@ -120,7 +116,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/javascript.png">
+                                <img alt = "javascript icon" src="images/skillicons/javascript.png">
                             </div>
                             <p>JavaScript</p>
                         </div>
@@ -129,7 +125,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/html.png">
+                                <img alt = "html icon" src="images/skillicons/html.png">
                             </div>
                             <p>HTML5</p>
                         </div>
@@ -138,7 +134,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/css.png">
+                                <img alt = "css icon" src="images/skillicons/css.png">
                             </div>
                             <p>CSS3</p>
                         </div>
@@ -147,7 +143,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/jQuery.png">
+                                <img alt = "jquery icon" src="images/skillicons/jQuery.png">
                             </div>
                             <p>jQuery</p>
                         </div>
@@ -156,7 +152,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/react.png">
+                                <img alt = "react icon" src="images/skillicons/react.png">
                             </div>
                             <p>React.js</p>
                         </div>
@@ -165,7 +161,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/redux.png">
+                                <img alt = "redux icon" src="images/skillicons/redux.png">
                             </div>
                             <p>Redux</p>
                         </div>
@@ -174,7 +170,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/es6.png">
+                                <img alt = "es6 icon" src="images/skillicons/es6.png">
                             </div>
                             <p>ECMAScript6</p>
                         </div>
@@ -183,7 +179,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/firebase.png">
+                                <img alt = "firebase icon" src="images/skillicons/firebase.png">
                             </div>
                             <p>Firebase</p>
                         </div>
@@ -195,7 +191,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/materializecss.png">
+                                <img alt = "materialize icon" src="images/skillicons/materializecss.png">
                             </div>
                             <p>Materialize</p>
                         </div>
@@ -204,7 +200,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/bootstrap.png">
+                                <img alt = "bootstrap icon" src="images/skillicons/bootstrap.png">
                             </div>
                             <p>Bootstrap</p>
                         </div>
@@ -213,7 +209,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/git.png">
+                                <img alt = "git icon" src="images/skillicons/git.png">
                             </div>
                             <p>Git</p>
                         </div>
@@ -222,7 +218,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/github.png">
+                                <img alt = "github icon" src="images/skillicons/github.png">
                             </div>
                             <p>Github</p>
                         </div>
@@ -231,7 +227,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/aws.png">
+                                <img alt = "aws icon" src="images/skillicons/aws.png">
                             </div>
                             <p>AWS</p>
                         </div>
@@ -240,7 +236,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/node.png">
+                                <img alt = "node icon" src="images/skillicons/node.png">
                             </div>
                             <p>Node.js</p>
                         </div>
@@ -249,7 +245,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/ajax.png">
+                                <img alt = "ajax icon" src="images/skillicons/ajax.png">
                             </div>
                             <p>AJAX</p>
                         </div>
@@ -258,7 +254,7 @@
                     <div class="area col-md-12 item">
                         <div class="skill-cont">
                             <div class = "skill-icon">
-                                <img src="images/skillicons/json.png">
+                                <img alt = "json icon"src="images/skillicons/json.png">
                             </div>
                             <p>JSON</p>
                         </div>
@@ -286,36 +282,36 @@
                         <div class="blog-image">
                             <img class = "folio-img" src="images/getdevjob.jpg" alt = "getdevjob landing page">
                             <div class = 'hover-cont'>
-                                <a class = "live-desktop" href='https://getdevjob.com' target="_blank">Live Demo</a> </span> <a class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>GitHub</a>
+                                <a rel="noreferrer" class = "live-desktop" href='https://getdevjob.com' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>GitHub</a>
                             </div>    
                         </div>
                         <h2 class="blog-title">getDevJob(you)</h2>
                         <p>Web based job board application targeted towards developers. React and Materialize was used to build our user interface. Endpoints were established using axios. PHP was used to handle requests from the client and to communicate with MySQL database. This app was created by 4 developers in 6 weeks. </p>
-                        <a class = "live-mobile" href='https://getdevjob.com' target="_blank">Live Demo</a> </span> <a class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>- GitHub</a></span>
+                        <a rel="noreferrer" class = "live-mobile" href='https://getdevjob.com' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>- GitHub</a></span>
                     </div>
                     <div href="single-blog.html" class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-content wow fadeInUp" data-wow-delay="0.6s">
                         <div class="blog-image">
                             <img class = 'folio-img' src="images/concertfinder.jpg" alt ="concertfinder landing page">
                             <div class = 'hover-cont'>
-                                <a class = "live-desktop" href='http://jacobcodes.com/concert-finder' target="_blank">Live Demo</a> </span> <a class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/concertfinder'>GitHub</a>
+                                <a rel="noreferrer" class = "live-desktop" href='http://jacobcodes.com/concert-finder' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/concertfinder'>GitHub</a>
                             </div>    
                         </div>
                         <h2 class="blog-title">ConcertFinder</h2>
                         <p>App that helps find concerts and search for restuarants, bars and hotels near the venue. Built with Javascript, jQuery, HTML and CSS. Utilized Ajax to access data from TicketMaster, Google and Yelp.</p>
-                        <span class="blog-info "><span><a class = "live-mobile" href='http://jacobcodes.com/concert-finder' target="_blank">Live Demo</a> </span> <a class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/concertfinder'>- GitHub</a></span>
+                        <span class="blog-info "><span><a rel="noreferrer" class = "live-mobile" href='http://jacobcodes.com/concert-finder' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/concertfinder'>- GitHub</a></span>
                     </div>
                     <div href="single-blog.html" class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-content wow hidden-sm fadeInUp" data-wow-delay="0.8s">
                         <div class="blog-image">
-                            <img src="images/mem_match.jpg" alt = "code in progress">
+                            <img class = 'folio-img' src="images/mem_match.jpg" alt = "code in progress">
                             <div class = 'hover-cont'>
-                                <a class = "live-desktop" href='http://memory.jacobcodes.com/' target="_blank">Live Demo</a> </span> <a class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/memory_match_react'>GitHub</a>
+                                <a rel="noreferrer" class = "live-desktop" href='http://memory.jacobcodes.com/' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/memory_match_react'>GitHub</a>
                             </div>  
                         </div>
                         <h2 class="blog-title">Memory Enrichment Center </h2>
                         <p>Memory Match game styled around the video game Portal aimed to emulate a computer operating system. Built with ReactJS, HTML, and CSS with an emphasis on CSS and keyframe animation.</p>
-                        <span class="blog-info "><span><a class = "live-mobile" href='http://memory.jacobcodes.com/' target="_blank">Live Demo</a> </span> <a class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/memory_match_react'>- GitHub</a></span>
+                        <span class="blog-info "><span><a rel="noreferrer" class = "live-mobile" href='http://memory.jacobcodes.com/' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/memory_match_react'>- GitHub</a></span>
                     </div>
-                    <!-- <a href="otherprojects.html" class="sitebtn pull-right top_45">Load More</a> -->
+                    <!-- <a rel="noreferrer" href="otherprojects.html" class="sitebtn pull-right top_45">Load More</a> -->
                 </div>
             </div>
             <svg class="diagonal-gray" width="100%" height="170" viewBox="0 0 100 102" preserveAspectRatio="none">
@@ -335,13 +331,13 @@
                 <!-- Contact Info -->
                 <ul class="contact-info row">
                     <li>Irvine, California</li>
-                    <li><br><span class = 'contact-email'></span></li>
+                    <li><span class = 'contact-email'></span></li>
                     <li><span class = 'contact-phone'></span></li>
                 </ul>
                 <div class="social-icons top_60 row"> 
-                    <a class="fb" href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> 
-                    <a class="tw" href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    <a class='fb' href="https://drive.google.com/file/d/1oMwaAs2LdSPB87F0rhmlah9rFE3p-eSy/view?usp=sharing" target="_blank"><i class="fa fa-file" aria-hidden="true"></i>  </a>
+                    <a rel="noreferrer" class="fb" href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> 
+                    <a rel="noreferrer" class="tw" href="https://www.linkedin.com/in/jacobcodes/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a rel="noreferrer" class='fb' href="https://drive.google.com/file/d/1oMwaAs2LdSPB87F0rhmlah9rFE3p-eSy/view?usp=sharing" target="_blank"><i class="fa fa-file" aria-hidden="true"></i>  </a>
                 </div>
             </div>
             <div class="col-md-7 col-md-offset-2 form top_30 bottom_45">
@@ -371,9 +367,9 @@
     <footer>
         <div class="container">
             <div class="social">
-                <a href="https://github.com/Firecoded" target="_blank">GitHub <i class="fa fa-github" aria-hidden="true"></i></a>
-                <a href="https://www.linkedin.com/in/jacobcodes/" target="_blank">LinkedIn <i class="fa fa-linkedin btm-icon" aria-hidden="true"></i></a> 
-                <a href="https://drive.google.com/file/d/1oMwaAs2LdSPB87F0rhmlah9rFE3p-eSy/view?usp=sharing" target="_blank">Resume <i class="fa fa-file" aria-hidden="true"></i>  </a>    
+                <a rel="noreferrer" href="https://github.com/Firecoded" target="_blank">GitHub <i class="fa fa-github" aria-hidden="true"></i></a>
+                <a rel="noreferrer" href="https://www.linkedin.com/in/jacobcodes/" target="_blank">LinkedIn <i class="fa fa-linkedin btm-icon" aria-hidden="true"></i></a> 
+                <a rel="noreferrer" href="https://drive.google.com/file/d/1oMwaAs2LdSPB87F0rhmlah9rFE3p-eSy/view?usp=sharing" target="_blank">Resume <i class="fa fa-file" aria-hidden="true"></i>  </a>    
             </div>
             <p></p>
         </div>
@@ -392,10 +388,10 @@
 <script>
 
    //SUPER SLİDER
-    $('#slides').superslides({
-      animation: 'fade',
-      play: 6000
-    });    
+    // $('#slides').superslides({
+    //   animation: 'fade',
+    //   play: 6000
+    // });    
 </script>    
     
  
