changed mem link to https

--- a/index.html
+++ b/index.html
@@ -304,12 +304,12 @@
                         <div class="blog-image">
                             <img class = 'folio-img' src="images/mem_match.jpg" alt = "code in progress">
                             <div class = 'hover-cont'>
-                                <a rel="noreferrer" class = "live-desktop" href='http://memory.jacobcodes.com/' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/memory_match_react'>GitHub</a>
+                                <a rel="noreferrer" class = "live-desktop" href='https://memory.jacobcodes.com/' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-desktop" target="_blank" href = 'https://github.com/Firecoded/memory_match_react'>GitHub</a>
                             </div>  
                         </div>
                         <h2 class="blog-title">Memory Enrichment Center </h2>
                         <p>Memory Match game styled around the video game Portal aimed to emulate a computer operating system. Built with ReactJS, HTML, and CSS with an emphasis on CSS and keyframe animation.</p>
-                        <span class="blog-info "><span><a rel="noreferrer" class = "live-mobile" href='http://memory.jacobcodes.com/' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/memory_match_react'>- GitHub</a></span>
+                        <span class="blog-info "><span><a rel="noreferrer" class = "live-mobile" href='https://memory.jacobcodes.com/' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/memory_match_react'>- GitHub</a></span>
                     </div>
                     <!-- <a rel="noreferrer" href="otherprojects.html" class="sitebtn pull-right top_45">Load More</a> -->
                 </div>
