--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128362359-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-128362359-1');
+</script>
+
 <title>Jacob Taylor Web Developer Portfolio</title>
 <meta charset="UTF-8">
 <meta name="description" content="Welcome to Jacob Taylors Web Developer Portfolio, located in Irvine, CA and currently open to new opportunities">
@@ -376,7 +386,10 @@
     </footer>   
     
 <!-- Javascripts -->
-<script src="js/jquery-2.1.4.min.js"></script><!-- jQuery library -->
+<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 <script src="js/bootstrap.min.js"></script> 
 <script src="js/wow.min.js"></script>
 <script src="js/isotope.pkgd.min.js"></script>
