fixed issue with mobile links to apps

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                         </div>
                         <h2 class="blog-title">getDevJob(you)</h2>
                         <p>Web based job board application targeted towards developers. React and Materialize was used to build our user interface. Endpoints were established using axios. PHP was used to handle requests from the client and to communicate with MySQL database. This app was created by 4 developers in 6 weeks. </p>
-                        <a rel="noreferrer" class = "live-mobile" href='https://getdevjob.com' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>- GitHub</a></span>
+                        <span class="blog-info "><span><a rel="noreferrer" class = "live-mobile" href='https://getdevjob.com' target="_blank">Live Demo</a> </span> <a rel="noreferrer" class = "github-mobile" target="_blank" href = 'https://github.com/Firecoded/react_getdevjob'>- GitHub</a></span>
                     </div>
                     <div href="single-blog.html" class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-content wow fadeInUp" data-wow-delay="0.6s">
                         <div class="blog-image">
