contact readability, mobile about img resize

--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
                 <!-- Contact Info -->
                 <ul class="contact-info row">
                     <li>Irvine, California</li>
-                    <li><span class = 'contact-email'></span></li>
-                    <li><span class = 'contact-phone'></span></li>
+                    <li><u><a href = "mailto: contactjacobtay@gmail.com?subject=Hey Jacob, let's chat!"><span class = 'contact-email'></span></a></u></li>
+                    <li><u><a href ="tel:+480-395-7011"><span class = 'contact-phone'></span></a></u></li>
                 </ul>
                 <div class="social-icons top_60 row"> 
                     <a rel="noreferrer" class="fb" href="https://github.com/Firecoded" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> 
