fixed hash routing issue

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     
     <!--PORTFOLIO-->
 
-    <section class="blog" id="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container-fluid dgray-bg padbot_120">
             <div class="container">
                 <div class="section-title dright top_90 bottom_45">
